--- a/tex/math.tex
+++ b/tex/math.tex
@@ -26,7 +26,7 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	$\boldsymbol{a} = (a_1, ..., a_k)$ & The output of an intermediate layer of a multi-layer network with $k$ neurons, the output of the last layer is typically denoted as $\boldsymbol{\hat{y}}$. $a_i$ is the output of an activation function of a single neuron.\\
 	$\boldsymbol{b} = (b_1, ..., b_k)$ & The bias of a network layer with 
     $k$ neurons. $b_i$ is the bias of a single neuron.\\
-    $C$ & The capacity of a Hopfield network, i.e. the number of patterns that can be stored or the number if channels from an input matrix.\\
+    $C$ & The capacity of a Hopfield network, i.e. the number of patterns that can be stored or the number of channels from an input matrix.\\
     $h$ & Hidden state of the memory storing object prototypes.\\
     $H$ & The height of an image.\\
     $J$ & The Jaccard similarity between two binary vectors (c.f. \eqref{jaccard}).\\
