--- a/sources_corrected.bib
+++ b/sources_corrected.bib
@@ -1,3 +1,48 @@
+@article{ash_design_1981,
+	title = {Design and Optimization of Networks With Dynamic Routing},
+	volume = {60},
+	issn = {0005-8580},
+	url = {https://ieeexplore.ieee.org/document/6772570},
+	doi = {10.1002/j.1538-7305.1981.tb00297.x},
+	pages = {1787--1820},
+	number = {8},
+	journaltitle = {Bell System Technical Journal},
+	author = {Ash, G. R. and Cardwell, R. H. and Murray, R. P.},
+	urldate = {2023-08-16},
+	date = {1981-10},
+	langid = {english},
+}
+
+@article{garg_color_2019,
+	title = {Color and orientation are jointly coded and spatially organized in primate primary visual cortex},
+	volume = {364},
+	issn = {0036-8075},
+	url = {https://www.science.org/doi/10.1126/science.aaw5868},
+	doi = {10.1126/science.aaw5868},
+	abstract = {Rethinking primary visual cortex function
+            
+              Understanding how color is coded in the brain is central to vision research. The presently dominant model suggests that color and orientation are separately extracted in the primate primary visual cortex. These characteristics are thought to be represented by neurons located in different cortical columns that project separately to higher visual areas for further processing. Working with macaques, Garg
+              et al.
+              recorded from thousands of neurons using two-photon calcium imaging with single-neuron resolution. Nearly half of sampled hue-selective neurons responded more strongly to equiluminant colored stimuli than to full-contrast achromatic stimuli. A majority of strongly color-preferring neurons were also orientation selective. Processing of orientation and color is thus combined at the earliest stages of visual processing, which challenges existing models.
+            
+            
+              Science
+              , this issue p.
+              1275
+            
+          , 
+            Analysis of neurons in the primate primary visual cortex indicates that orientation and color are mutually processed by overlapping circuits.
+          , 
+            Previous studies support the textbook model that shape and color are extracted by distinct neurons in primate primary visual cortex (V1). However, rigorous testing of this model requires sampling a larger stimulus space than previously possible. We used stable {GCaMP}6f expression and two-photon calcium imaging to probe a very large spatial and chromatic visual stimulus space and map functional microarchitecture of thousands of neurons with single-cell resolution. Notable proportions of V1 neurons strongly preferred equiluminant color over achromatic stimuli and were also orientation selective, indicating that orientation and color in V1 are mutually processed by overlapping circuits. Single neurons could precisely and unambiguously code for both color and orientation. Further analyses revealed systematic spatial relationships between color tuning, orientation selectivity, and cytochrome oxidase histology.},
+	pages = {1275--1279},
+	number = {6447},
+	journaltitle = {Science},
+	shortjournal = {Science},
+	author = {Garg, Anupam K. and Li, Peichao and Rashid, Mohammad S. and Callaway, Edward M.},
+	urldate = {2023-08-16},
+	date = {2019-06-28},
+	langid = {english},
+}
 
 @article{zou_object_2023,
 	title = {Object Detection in 20 Years: A Survey},
